--- a/polyV1/mainwindow.ui
+++ b/polyV1/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QLabel" name="descriptionLabel">
       <property name="text">
-       <string>请输入多项式（使用格式：3^0+2^1+1^2），然后选择需要执行的运算。</string>
+       <string>请输入多项式（使用格式：3^0+2^1+1^2）执行运算，或在下方输入算术表达式进行求值。</string>
       </property>
       <property name="wordWrap">
        <bool>true</bool>
@@ -69,10 +69,10 @@
         </property>
        </widget>
       </item>
-     </layout>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="operationsLayout">
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="operationsLayout">
       <item>
        <widget class="QPushButton" name="addButton">
         <property name="text">
@@ -107,13 +107,43 @@
          <string>代入 x</string>
         </property>
        </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="expressionGroupBox">
+     <property name="title">
+      <string>算术表达式计算</string>
+     </property>
+     <layout class="QGridLayout" name="expressionLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="expressionLabel">
+        <property name="text">
+         <string>表达式：</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="expressionLineEdit">
+        <property name="placeholderText">
+         <string>支持括号与 + - * / ^，例如：(2+3)*4</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="2">
+       <widget class="QPushButton" name="expressionEvalButton">
+        <property name="text">
+         <string>计算表达式</string>
+        </property>
+       </widget>
       </item>
      </layout>
-    </item>
-    <item>
-     <widget class="QPlainTextEdit" name="resultTextEdit">
-      <property name="placeholderText">
-       <string>运算结果将显示在此处。</string>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPlainTextEdit" name="resultTextEdit">
+     <property name="placeholderText">
+      <string>运算结果将显示在此处。</string>
       </property>
      </widget>
     </item>
